Fixed test compilation